# GEOSgcm_GridComp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Constants.F90  ConvPar_GF2020.F90  ConvPar_GF_Shared.F90  Externals.cfg  Externals_sans_mom.cfg  GCM_Preamble.tex  GEOS_GFDL_1M_InterfaceMod.F90  GEOS_GF_InterfaceMod.F90  GEOS_GcmGridComp.F90  GEOS_MoistGridComp.F90  GEOS_UW_InterfaceMod.F90  GEOS_Utilities.F90  GFDL_1M_RUN_data.F90  GFDL_1M_RUN_mod.F90  GNUmakefile  InternalConstants.F90  MAPL_Constants.F90  MAPL_SatVapor.F90  Makefile  MathConstants.F90  PhysicalConstants.F90  Process_Library.F90  README.md  aer_actv_single_moment.F90  aer_cloud.F90  calcdbz.F  cesm_const_mod.F90  coords_1d.F90  dqsat.code  dqsat_fast.code  dqsat_new.code  edmf.F90  edmfparams.F90  eqsat.H  esatice.H  esatice.code  (+48 more)
GEOSagcm_GridComp/GEOShs_GridComp/: CMakeLists.txt  GEOS_HsGridComp.F90  GEOShs.rc  HS_StateSpecs.rc  held-suarez.yaml  held_suarez_oacc.F90  hs_c_interface.c
GEOSagcm_GridComp/GEOShs_GridComp/regression/: CMakeLists.txt  README  cases.txt  run_case.cmake
GEOSagcm_GridComp/GEOSphysics_GridComp/CCPP_GFSmoist_GridComp/: AddSpec.inc  CCPP_GFS_MoistGridComp.F90  CMakeLists.txt  namelist_phy.inc  phy_var_declarations.inc
GEOSagcm_GridComp/GEOSphysics_GridComp/GEOSgwd_GridComp/: .gitignore  CMakeLists.txt  GEOS_GwdGridComp.F90  GNUmakefile  GWD_GridComp.rc  GWD_StateSpecs.rc  gw_drag.F90  gwdps.f  machine.F90
GEOSagcm_GridComp/GEOSphysics_GridComp/GEOSmoist_GridComp/: .GEOS_MoistGridComp.F90.swp  .cloudnew.F90.swp  .gitignore  CLDPARAMS.F90  CMakeLists.txt  ConvParGFCore.F90  ConvParGFHarness.F90  ConvPar_GF2020.F90  ConvPar_GF2020.F90.SER  ConvPar_GF2020.F90.test  ConvPar_GF2020.F90.test0  ConvPar_GF_GEOS5.F90  ConvPar_GF_GEOS5_sub.F90  ConvPar_GF_Shared.F90  GEOS_BACM_1M_InterfaceMod.F90  GEOS_GFDL_1M_InterfaceMod.F90  GEOS_GFDL_1M_InterfaceMod.F90.SER  GEOS_GF_InterfaceMod.F90  GEOS_GF_InterfaceMod.F90.SER  GEOS_MGB2_2M_InterfaceMod.F90  GEOS_MoistGridComp.F90  GEOS_MoistGridComp.F90.SER  GEOS_MoistGridComp.F90.nathan  GEOS_NSSL_2M_InterfaceMod.F90  GEOS_RAS_InterfaceMod.F90  GEOS_THOM_1M_InterfaceMod.F90  GEOS_UW_InterfaceMod.F90  GEOS_UW_InterfaceMod.F90.SER  GNUmakefile  OUTPUT_NETCDFS.F90  PlumeDiagnosticsModule.F90  PlumeStateModule.F90  ProcessLibraryParameters.F90  Process_Library.F90  Process_Library.F90.SER  RASPARAMS.F90  SHLWPARAMS.F90  WSUB_ExtData.rc  WSUB_ExtData.yaml  Wnet.F90  (+42 more)
GEOSagcm_GridComp/GEOSphysics_GridComp/GEOSsurface_GridComp/: CMakeLists.txt  GEOS_SurfaceGridComp.F90  GNUmakefile
GEOSagcm_GridComp/GEOSphysics_GridComp/GEOSturbulence_GridComp/: CMakeLists.txt  GEOS_TurbulenceGridComp.F90  GEOS_TurbulenceGridComp.F90-Louis  GEOS_TurbulenceGridComp.F90-NEW  GEOS_TurbulenceGridComp.F90-SAVE  GEOS_TurbulenceGridComp.F90.orig4_pblrflow_pblrfhgh_wo_param_adj  GEOS_TurbulenceGridComp.F90.v1.pblrf_without_300m  GEOS_TurbulenceGridComp.F90.v2.nathan.rwp.9May2025  GEOS_TurbulenceGridComp.F90.v3.nathan.rwp.updated.15May2025  GEOS_TurbulenceGridComp.F90.v4.pblrf_without_300m_and_rwp_updated_merged  GEOS_TurbulenceGridComp.rc  GNUmakefile  LockEntrain.F90  SOURCE.txt  edmf.F90  edmf_new.F90  edmfparams.F90  mynn.F90  pblh_library.F90  scm_surface.F90  shoc.F90  shocparams.F90  sl3.F90  toy_surface.F90
GEOSagcm_GridComp/GEOSphysics_GridComp/GFSmoist_GridComp/: AddSpec.inc  CMakeLists.txt  GFS_MoistGridComp.F90  GFS_typedefs_stubs.F90  namelist_phy.inc  phy_var_declarations.inc
GEOSagcm_GridComp/GEOSsuperdyn_GridComp/FVdycoreCubed_GridComp/: .cppdefs  AdvCore_GridCompMod.F90  AppGridCreate.F90  CMakeLists.txt  CreateInterpWeights.F90  CreateInterpWeights_GridCompMod.F90  CreateTopography.F90  Cube2LatLon.F90  CubeGridPrototype.F90  CubeHalo.F90  CubeToCubeRegridder.F90  CubeToLatLon.F90  CubeToLatLonRegridder.F90  CubedSphereGridFactory.F90  DynCore_GridCompMod.F90  ESMF_GenerateCSGridDescription.F90  FV_StateMod.F90  FVdycore_arch.mk  GNUmakefile  GetWeights.F90  GetWeightsC2C.F90  LatLon2Cube.F90  LatLonToCubeRegridder.F90  StandAlone_AdvCore.F90  StandAlone_DynAdvCore.F90  StandAlone_DynAdvCore_GridCompMod.F90  StandAlone_FV3_Dycore.F90  c2c.F90  c2c_rst.F90  c2l_CFIO_offline.F90  dyn_interp_rst.F90  integerinteger1daltmap_mod.mod  interp_restarts.F90  jw.f90  moist_interp_rst.F90  rs_scale.F90  sw.f90  test_integerinteger1dmap_mod.mod  testcases_3_4_5_6_stand_alone.f90
GEOSagcm_GridComp/GEOSsuperdyn_GridComp/FVdycore_GridComp/: BlendingMod.F90  CMakeLists.txt  FVdycore_GridCompMod.F90  FVdycore_arch.mk  FVdycore_dynamics.rc  FVdycore_wrapper.F90  FVperf_module.F90  G3_AVRX.F90  GNUmakefile  benergy.F90  cd_core.F90  diag_module.F90  dynamics_vars.F90  epvd.F90  fill_module.F90  geopk.F90  glosum.F90  mapz_module.F90  mfz_comp.F90  pft_module.F90  pmaxmin.F90  remap.F90  sw_core.F90  te_map.F90  tp_core.F90  trac2d.F90
GEOSdataatm_GridComp/: CMakeLists.txt  CORE_NYF_Data_AtmForcings_ExtData.yaml  ForcingSpecification.F90  GEOS_DataAtmGridComp-pseudoCode.F90  GEOS_DataAtmGridComp.F90  GNUmakefile  JRA55-DO_DataAtm_Forcings_ExtData.yaml  cube_sphere.F90  ncar_ocean_fluxes.F90
GEOSmkiau_GridComp/: CMakeLists.txt  DFI_GridComp.F90  DynVec_GridComp.F90  GEOS_mkiauGridComp.F90  GEOS_mkiauGridComp.F90.rt  GNUmakefile  IAU_GridCompMod.F90  mkiau_specmod.F90  pyMLINC.cmake
GEOSmkiau_GridComp/pyMKIAU/: README.md  setup.py
GEOSmkiau_GridComp/pyMKIAU/interface/: interface.c  interface.f90  interface.h  interface.py
GEOSmkiau_GridComp/pyMLINC/: .gitignore  README.md  setup.py
GEOSogcm_GridComp/GEOS_OceanGridComp/: CMakeLists.txt  GEOS_OceanGridComp.F90
GEOSogcm_GridComp/GEOSseaice_GridComp/: CMakeLists.txt  GEOS_SeaIceGridComp.F90  GEOSseaice_GridComp.F90  GNUmakefile
GEOSwgcm_GridComp/: CMakeLists.txt  GEOS_WgcmGridComp.F90  WGCM.rc  bl_seaspray.F90
GEOSwgcm_GridComp/GEOSumwm_GridComp/: .gitignore  CMakeLists.txt  GEOS_UMWMGridComp.F90  UMWM.rc  UMWM_ExtData.yaml  UMWM_GridComp_ExtData.rc  bl_seaspray.F90
GEOSwgcm_GridComp/GEOSwavewatch_GridComp/: .gitignore  CMakeLists.txt  GEOS_WaveWatchGridComp.F90
(+2444 files in other folders)
